--- a/main.css
+++ b/main.css
@@ -11,8 +11,8 @@
 
 #flick-control {
       position: fixed;
-      bottom: 70px;
-      right: 70px;
+      bottom: 120px;
+      right: 120px;
       z-index: 1000;
       pointer-events: auto;
       transition: all 0.01s;  /* 位置の変更をスムーズに */
@@ -41,8 +41,8 @@
 
 
   .flick-circle {
-      width: 40px;
-      height: 40px;
+      width: 10vmin;
+      height: 10vmin;
       background-color: rgba(255, 255, 255, 0.8);
       border: 2px solid #333;
       border-radius: 50%;
@@ -53,22 +53,22 @@
 
   #flick-options {
       position: absolute;
-      width: 50px;
-      height: 50px;
+      width: 10vmin;
+      height: 10vmin;
 
   }
 
   .flick-option {
       position: absolute;
-      width: 40px;
-      height: 40px;
+      width: 10vmin;
+      height: 10vmin;
       background-color: rgba(255, 255, 255, 0.9);
       border: 1px solid #333;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 14px;
+      font-size: 4vmin;
       transition: all 0.2s;
       box-shadow: 0 1px 3px rgba(0,0,0,0.2);
 
@@ -112,6 +112,9 @@
     position: absolute;
     right: 10px;
     margin-top: 5px;
+    width: 20vmin;
+    height: 10vmin;
+      font-size: 3vmin;
     padding: 5px 10px;
     background-color: #f0f0f0;
     border: 1px solid #ffffff;
